--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html>
 	<head>
 		<meta 	charset = "utf-8">
-		<title>Movie Theater WebVR Virtual Reality Experience Dying Light</title>
+		<title>Movie Theater WebVR Virtual Reality Experience Countdown</title>
 		<meta 	name = "author"
 				content="Donovan Kraeker">
 		<meta 	name = "description"
@@ -219,7 +219,7 @@
 				material = "shader: standard; color: #000">
 			</a-entity>
 			<a-video
-				src = "videos/dying-1ight.mp4"
+				src = "videos/Countdown.mp4"
 				autoplay = "true"
 				width = "19"
 				height = "11"
