--- a/index.html
+++ b/index.html
@@ -226,7 +226,7 @@
 				position = "0 5.5 -8">
 			</a-video>
 			<a-model
-				src = "models/sofa.da"
+				src = "models/sofa.dae"
 				scale = "1 1 1"
 				position = "0 0.35 7.6"
 				rotation = "0 90 0">
