--- a/index.html
+++ b/index.html
@@ -220,14 +220,14 @@
 			</a-entity>
 			<a-video
 				src = "videos/Countdown.mp4"
-				autoplay = "false"
+				autoplay = "true"
 				width = "19"
 				height = "11"
 				position = "0 5.5 -8">
 			</a-video>
 			<a-model
 				src = "models/sofa.dae"
-				scale = "1 2 1"
+				scale = "1 1 1"
 				position = "0 0.35 7.6"
 				rotation = "0 90 0">
 			</a-model>
