--- a/index.html
+++ b/index.html
@@ -220,7 +220,7 @@
 			</a-entity>
 			<a-video
 				src = "videos/Countdown.mp4"
-				autoplay = "false"
+				autoplay = "true"
 				width = "19"
 				height = "11"
 				position = "0 5.5 -8">
@@ -228,7 +228,7 @@
 			<a-model
 				src = "models/sofa.dae"
 				scale = "1 1 1"
-				position = "0 0.40 7.6"
+				position = "0 0.35 7.5"
 				rotation = "0 90 0">
 			</a-model>
 
